--- a/assets/game.html
+++ b/assets/game.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow" />
 
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
   <body>
     <div class="outer">
       <container class="UpCon">
-        <div>Wait-t-t</div>
+        <div class="title">Wait-t-t</div>
 
-        <div id="wallet">
+        <div class="wallet">
           <span id="energy">
             <span id="energyIcon">⚡</span>
             <span id="energyCount">5</span>
@@ -27,24 +28,31 @@
       </container>
 
       <container class="MiddleCon">
-        <div id="stopwatch">00:00:00</div>
+        <div class="stopwatch" id="stopwatch">00:00:00</div>
         <div id="score">0</div>
       </container>
 
       <container class="DownCon">
-        <button class="DownButton"><div class="DBN">Click</div></button>
-        <button class="DownButton">
-          <div class="DBN">Stop</div>
-          <div class="DBM">game</div>
-        </button>
-        <button class="DownButton">
-          <div class="DBN">Time</div>
-          <div class="DBM">store</div>
-        </button>
-        <button class="DownButton">
-          <div class="DBN">Score</div>
-          <div class="DBM">store</div>
-        </button>
+        <div>
+          <button class="DownButton">
+            <div class="DBN">Click</div>
+            <div class="DBM">⠀</div>
+          </button>
+          <button class="DownButton">
+            <div class="DBN">Stop</div>
+            <div class="DBM">game</div>
+          </button>
+        </div>
+        <div>
+          <button class="DownButton">
+            <div class="DBN">Time</div>
+            <div class="DBM">store</div>
+          </button>
+          <button class="DownButton">
+            <div class="DBN">Score</div>
+            <div class="DBM">store</div>
+          </button>
+        </div>
       </container>
     </div>
 
