Начинаю работать, ахпхппхпх

--- a/assets/game.html
+++ b/assets/game.html
@@ -7,106 +7,157 @@
     <meta name="robots" content="noindex, nofollow" />
 
     <style type="text/css">
-      @import url(https://fonts.googleapis.com/css?family=Baloo+Bhai);
+      @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500;600;700;800&display=swap');
 
       html {
-        font-family: 'Baloo Bhai', sans-serif;
-        font-size: 4em;
+        font-family: 'Baloo Bhai 2', cursive;
+        font-weight: bold;
+        font-size: 3em;
         background-color: #000000;
       }
+
       div,
       h1 {
         color: white;
+        text-align: center;
       }
 
-      div.outer {
-        height: 10em;
+      .mega {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
         display: flex;
         align-items: center;
+        align-content: center;
         justify-content: center;
-        flex-direction: column;
-      }
-      div.outer {
-        margin: 0;
+        overflow: auto;
       }
 
-      .button {
-        background-color: #fbeee0;
-        border: 2px solid #422800;
-        border-radius: 30px;
-        box-shadow: #422800 4px 4px 0 0;
-        color: #422800;
-        cursor: pointer;
-        display: inline-block;
-        font-weight: 600;
-        font-size: 18px;
-        padding: 0 18px;
-        line-height: 50px;
-        text-align: center;
-        text-decoration: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
+      button {
+        background-color: #000000;
+        border-style: dotted;
+        border-color: white;
+        border-radius: 20px;
+
+        font-size: 0.5em;
+        font-weight: bold;
+        line-height: 1;
+
+        width: 5em;
+        height: 3em;
+      }
+      button:active {
+        border-style: solid;
       }
 
-      .button:hover {
-        background-color: #fff;
+      img {
+        border-radius: 100%;
+        width: 3em;
       }
 
-      .button:active {
-        box-shadow: #422800 2px 2px 0 0;
-        transform: translate(2px, 2px);
+      .DBMmini {
+        font-size: 0.5em;
+        font-family: 'Baloo Bhai 2', cursive;
+        font-weight: bold;
       }
 
-      @media (min-width: 768px) {
-        .button {
-          min-width: 120px;
-          padding: 0 25px;
-        }
+      .UpCon, .gifCon, .MiddleCon {
+        line-height: 1.2;
+      }
+      img {
+        margin-top: 0.5em;
       }
     </style>
   </head>
   <body>
-    <div class="outer">
-      <div>Wait-t-t</div>
+    <div class="mega">
+      <div class="outer">
+        <container class="UpCon">
+          <div>Wait-t-t</div>
 
-      <div id="stopwatch3">00</div>
-      <div id="stopwatch2">00</div>
-      <div id="stopwatch">00</div>
+          <div id="wallet">
+            <span id="energy">
+              <span id="energyIcon">⚡</span>
+              <span id="energyCount">5</span>
+            </span>
+             |
+            <span id="timeFaster">
+              <span id="timeFasterIcon">💨</span>
+              <span id="timeFasterCount">0x</span>
+            </span>
+          </div>
+        </container>
 
-      <button class="button" onClick="gameFinished()" id="stp" >
-        Я всё
-      </button>
+        <container class="gifCon">
+          <img src="/cat.gif" alt="">
+        </container>
+
+        <container class="MiddleCon">
+          <div id="stopwatch">00:00:00</div>
+          <div id="score">0</div>
+        </container>
+
+        <container class="DownCon">
+          <button class="DownButton" onclick="clickSc()">
+            <div class="DBNMega">Click</div>
+            <div class="DBMmini">please</div>
+          </button>
+          <button class="DownButton" onClick="gameFinished()" >
+            <div class="DBNMega">Stop</div>
+            <div class="DBMmini">game</div>
+          </button>
+          <br />
+          <button class="DownButton">
+            <div class="DBNMega">Time</div>
+            <div class="DBMmini">store</div>
+          </button>
+          <button class="DownButton">
+            <div class="DBNMega">Score</div>
+            <div class="DBMmini">store</div>
+          </button>
+        </container>
+      </div>
     </div>
 
     <script type="text/javascript">
       var stopwatch = document.getElementById('stopwatch')
-      var stopwatch2 = document.getElementById('stopwatch2')
-      var stopwatch3 = document.getElementById('stopwatch3')
+      var pointss = document.getElementById('score')
 
       var score = 0
+      var points = 0
       var sec = 0
       var min = 0
       var hrs = 0
       var t
 
+      function clickSc() {
+        points = points + 1
+        pointss.innerHTML = points
+      }
+
       function tick() {
-        score++
-        sec++
-        if (sec >= 60) {
-          sec = 0
-          min++
-          if (min >= 60) {
-            min = 0
-            hrs++
+        if (ec > 0) {
+          sec++
+          if (sec >= 60) {
+            sec = 0
+            min++
+            if (min >= 60) {
+              min = 0
+              hrs++
+            }
           }
         }
       }
       function add() {
         tick()
-        stopwatch3.innerHTML = (hrs > 9 ? hrs : '0' + hrs)
-        stopwatch2.innerHTML = (min > 9 ? min : '0' + min)
-        stopwatch.innerHTML = (sec > 9 ? sec : '0' + sec)
+        stopwatch.innerHTML =
+          (hrs > 9 ? hrs : '0' + hrs) +
+          ':' +
+          (min > 9 ? min : '0' + min) +
+          ':' +
+          (sec > 9 ? sec : '0' + sec)
         timer()
       }
       function timer() {
@@ -128,6 +179,37 @@
       }
 
       timer()
+    </script>
+    <script type="text/javascript">
+      var energyCount = document.getElementById('energyCount')
+      var timeFasterCount = document.getElementById('timeFasterCount')
+
+      var ec = 5
+      var tfc = 0
+
+      var tickTime = 0
+
+      function tickC() {
+        if (tickTime == 60) {
+          if (ec != 0) {
+            ec--
+          }
+          tickTime = 0
+        } else {
+          tickTime++
+        }
+      }
+      function addC() {
+        tickC()
+        energyCount.innerHTML = ec
+        timeFasterCount.innerHTML = tfc + 'x'
+        timerC()
+      }
+      function timerC() {
+        t = setTimeout(addC, 1000)
+      }
+
+      timerC()
     </script>
   </body>
 </html>
